[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm[toml]>=3.4"]

[tool.setuptools_scm]
write_to = "mola/_version.py"

[tool.autopep8]
max-line-length = 120

[tool.isort]
force_single_line = true
line_length = 120
known_first_party = "mola"
known_third_party = "compas,compas_fab,compas_rrc,Rhino"
default_section = "THIRDPARTY"
forced_separate = "test_mola"
add_imports = "__future__.absolute_import,__future__.division,__future__.print_function"
force_adds = true
skip = "_version.py"

[tool.black]
include = '\.pyi?$'
target-version = ['py27', 'py36', 'py37', 'py38']
